tests/ui/rfcs/rfc-2632-const-trait-impl/issue-100222.yy.stderr
error[E0271]: type mismatch resolving `<() as Index>::Output == &mut <() as Index>::Output`
  --> $DIR/issue-100222.rs:25:12
   |
LL |     fn foo(&mut self, x: <Self as Index>::Output) -> <Self as Index>::Output
   |            ^^^^^^^^^ expected `()`, found `&mut <() as Index>::Output`
   |
   = note:      expected unit type `()`
           found mutable reference `&mut <() as Index>::Output`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
